--- a/frontend/src/shared/styles/global.scss
+++ b/frontend/src/shared/styles/global.scss
@@ -1,3 +1,5 @@
+@use './variables' as *;
+
 html,
 body,
 #root {
@@ -5,7 +7,10 @@ body,
   width: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif !important;
+  scroll-behavior: smooth;
+  color: $text-primary;
+  border-radius: $border-size-primary;
 }
 
 * {
