--- a/frontend/src/widgets/MobileNavigation/MobileNavigation.module.scss
+++ b/frontend/src/widgets/MobileNavigation/MobileNavigation.module.scss
@@ -1,3 +1,4 @@
+@use '@shared/styles/variables' as *;
 
 .mobileNav {
   position: fixed;
@@ -6,22 +7,18 @@
   left: 0;
   display: flex;
   height: 64px;
-  background: #001529;
+  background: $background-primary;
   border-top: 1px solid #333;
   justify-content: space-around;
   align-items: center;
-  z-index: 1000;
+  z-index: 2;
   flex-shrink: 0;
 
   a,
   div {
-    color: #fff;
-    font-size: 14px;
+    color: $text-white;
+    font-size: $font-size-small;
     text-align: center;
     text-decoration: none;
-  }
-
-  a:hover {
-    color: #1890ff;
   }
 }
