feat: librarian dashboard

--- a/frontend/src/app/layout/MainLayout/MainLayout.module.scss
+++ b/frontend/src/app/layout/MainLayout/MainLayout.module.scss
@@ -44,7 +44,7 @@
   border-radius: $border-size-primary;
   flex: 1;
   overflow-y: auto;
-  min-height: 0;
+  min-height: calc(100vh - 100px);
 }
 
 
