--- a/frontend/src/shared/styles/variables.scss
+++ b/frontend/src/shared/styles/variables.scss
@@ -14,6 +14,7 @@ $background-primary: #0c0c0c;
 $background-secondary: #181818;
 $background-foreground: #262626;
 $background-white: #fff;
+$background-gray: #f5f5f5;
 
 // BORDER SIZE
 $border-size-primary: 24px;
