--- a/frontend/src/shared/styles/variables.scss
+++ b/frontend/src/shared/styles/variables.scss
@@ -11,7 +11,7 @@ $text-black: #000;
 
 // BACKGROUND COLORS
 $background-primary: #0c0c0c;
-$background-secondary: #181818;
+$background-secondary: #282828;
 $background-foreground: #262626;
 $background-white: #fff;
 $background-gray: #f5f5f5;
@@ -25,3 +25,6 @@ $font-size-small: 14px;
 $font-size-medium: 16px;
 $font-size-large: 18px;
 $font-size-heading: 22px;
+
+// PADDING
+$padding-xl: 16px;
