--- a/frontend/src/shared/styles/variables.scss
+++ b/frontend/src/shared/styles/variables.scss
@@ -25,6 +25,12 @@ $font-size-small: 14px;
 $font-size-medium: 16px;
 $font-size-large: 18px;
 $font-size-heading: 22px;
+$font-size-title: 40px;
+
+// FONT WEGHT
+
+$font-weight: 600;
+$font-weight-small: 200;
 
 // PADDING
 $padding-xl: 16px;
