--- a/frontend/src/widgets/RecommendationBook/RecommendationBook.module.scss
+++ b/frontend/src/widgets/RecommendationBook/RecommendationBook.module.scss
@@ -6,8 +6,7 @@
 }
 
 .heading {
-  font-weight: 200;
-  margin-bottom: 0;
+  font-weight: $font-weight-small;
 }
 .scrollContainer {
   display: flex;
