--- a/frontend/src/widgets/RecommendationBook/componets/CardBook/CardBook.module.scss
+++ b/frontend/src/widgets/RecommendationBook/componets/CardBook/CardBook.module.scss
@@ -1,7 +1,9 @@
+@use '@shared/styles/variables' as *;
+
 .card {
-  padding: 16px;
+  padding: 8px;
   border: 1px solid #d9d9d9;
-  border-radius: 8px;
+  border-radius: $border-radius-sm;
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
@@ -15,7 +17,7 @@
 .title {
   margin-bottom: 8px !important;
   color: #262626;
-  font-weight: 600;
+  font-weight: $font-weight;
   line-height: 1.4;
 
   display: -webkit-box;
@@ -28,7 +30,7 @@
   display: block;
   margin-bottom: 12px;
   color: #595959;
-  font-size: 14px;
+  font-size: $font-size-small;
   line-height: 1.3;
 }
 
@@ -37,7 +39,7 @@
   align-items: center;
   gap: 4px;
   color: #8c8c8c;
-  font-size: 13px;
+  font-size: $font-size-small;
 
   &::before {
     margin-right: 4px;
@@ -45,6 +47,7 @@
 }
 
 .WrapperButton {
+  padding: 4px;
   display: flex;
   justify-content: space-between;
 }
