--- a/frontend/src/widgets/RecommendationBook/componets/CardBook/CardBook.module.scss
+++ b/frontend/src/widgets/RecommendationBook/componets/CardBook/CardBook.module.scss
@@ -7,11 +7,6 @@
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
-
-  &:hover {
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    transform: translateY(-2px);
-  }
 }
 
 .title {
@@ -25,29 +20,32 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-
-.author {
-  display: block;
+.authorRow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 12px;
-  color: #595959;
+}
+.author {
+  color: $text-secondary;
   font-size: $font-size-small;
   line-height: 1.3;
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
 
+.iconButton {
+  color: #69b1ff;
+  font-size: 16px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
 .quantity {
   display: flex;
   align-items: center;
   gap: 4px;
   color: #8c8c8c;
   font-size: $font-size-small;
-
-  &::before {
-    margin-right: 4px;
-  }
-}
-
-.WrapperButton {
-  padding: 4px;
-  display: flex;
-  justify-content: space-between;
 }
