--- a/frontend/src/app/layout/MainLayout/MainLayout.module.scss
+++ b/frontend/src/app/layout/MainLayout/MainLayout.module.scss
@@ -18,6 +18,12 @@
   }
 }
 
+.headerRight {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
 .logo {
   color: $background-white;
   font-weight: 600;
@@ -55,6 +61,10 @@
     > :last-child {
       display: none;
     }
+  }
+
+  .headerRight {
+    display: none;
   }
 
   .content {
