--- a/frontend/src/entities/book/ui/BookCard/BookCard.module.scss
+++ b/frontend/src/entities/book/ui/BookCard/BookCard.module.scss
@@ -8,7 +8,11 @@
   justify-content: space-between;
   height: 100%;
 }
-
+.author {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .cover {
   height: 220px;
   background: $background-secondary;
